tests/fixtures/invalid/pow_str_dict.py
# Cannot call pow() with Str, Dict[str, int]
x = pow("hello", {"a": 1})
